# 1stProyect-STLC-py

./: pyproject.toml  requirements.txt
STLC_proj/: Console.py  Langage_Spec.txt  Parser.py  lexer.py
tests/: test_lexer.py  test_parser.py  test_prueba.py
